<resources>
    <string name="app_name" translatable="false">HeyYZU</string>

    <string name="placeholder_username">Portal Username</string>
    <string name="placeholder_password">Portal Password</string>

    <string name="btn_login">Login</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="btn_view_all">View All</string>

    <string name="dialog_title_login_fail">Login Fail</string>
    <string name="dialog_title_invalid_user">Invalid User</string>
    <string name="dialog_title_please_upgrade">Please Upgrade</string>
    <string name="dialog_title_oops">Oops!</string>
    <string name="dialog_title_logout">Logout</string>

    <string name="dialog_message_network_problem">Can NOT connect server. Please check your network state.</string>
    <string name="dialog_message_invalid_username_or_password">Check your username and password and try again.</string>
    <string name="dialog_message_please_upgrade_client">APP version is too old. Please upgrade APP via Google Play.</string>
    <string name="dialog_message_yzu_server_error">Server(YZU) seems to have some problem!</string>
    <string name="dialog_message_server_error">Server seems to have some problem. We will fix it as soon as possible!</string>
    <string name="dialog_message_logout">Are you sure you want to log out?</string>
    <string name="dialog_message_token_expired">Token is expired, please login again.</string>

    <string name="toast_message_username_or_password_is_empty">Username or Password is EMPTY!</string>
    <string name="hint_library_search">Search books...</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_showBook">Collection Info.</string>
    <string name="title_fragment_library">Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_course">Course</string>
    <string name="navigation_menu_library">Library</string>
    <string name="navigation_menu_calendar">Calendar</string>
    <string name="navigation_menu_back">Back</string>

    <string name="fragment_page_title_announcement">Announcement</string>
    <string name="fragment_page_title_homework">Homework</string>
    <string name="fragment_page_title_material">Material</string>

    <string name="homework_deadline_remaining_hours_txt">Left for %1$d hours(s) %2$d min(s).</string>

    <string name="homework_deadline_remaining_days_txt">Left for %1$d day(s).</string>

    <string name="homework_deadline_has_been_close_txt">Has been close on %1$s.</string>

    <!-- course homework -->
    <string name="txt_homework_deadline_after">Deadline in %1$d</string>
    <string name="txt_homework_deadline_closing">It was closing on %1$s</string>
    <string name="txt_homework_subject">Title</string>
    <string name="txt_homework_schedule">Schedule</string>
    <string name="txt_homework_description">Description</string>
    <string name="txt_homework_deadline">Deadline</string>
    <string name="txt_homework_attachment">Attachment</string>
    <string name="txt_homework_uploadedFile">Uploaded File</string>
    <string name="txt_homework_empty_attach">No attachment</string>
    <string name="txt_homework_grade">Grade and Comment</string>
    <string name="txt_homework_no_comment">No comment</string>
    <string name="txt_homework_empty">Have not assign anything.</string>

    <string name="txt_homework_countdown">%1$d day(s)</string>

    <string name="txt_material_handout">Handout</string>
    <string name="txt_material_link">Link</string>
    <string name="txt_material_video">Video</string>
    <string name="txt_material_empty">Have not uploaded any material.</string>

    <string name="txt_announcement_signature">%1$s post on %2$s</string>
    <string name="txt_announcement_subject">Title</string>
    <string name="txt_announcement_content">Content</string>

    <string name="txt_announcement_empty">Have not post anything.</string>


    <string name="txt_library_reading_book">Reading Book (%1$d)</string>
    <string name="txt_library_reserving_book">Reserving Book (%1$d)</string>
    <string name="txt_library_favorite_book">Collection Book (%1$d)</string>
    
    <string name="txt_library_book_due_left">%1$d day(s) left.</string>
    <string name="txt_library_book_due_over">Over %1$d day(s).</string>
    <string name="txt_library_book_due_over_with_fine">Over %1$d day(s) with %2$d fine.</string>

    <string name="txt_library_no_reading_book">Nothing is reading.</string>
    <string name="txt_library_no_reserving_book">Nothing is reserving.</string>
    <string name="txt_library_no_favorite_book">Nothing on your collection.</string>
    
    <string name="txt_library_no_entity_book">There is not entity book on library.</string>
    
    <string name="txt_library_reserving_available_to_pick_up">Available now (Reserved until %1$s)</string>
    <string name="txt_library_reserving_order">Order %1$d</string>

    <string name="txt_library_book_status_loaned_out">Loaned out</string>
    <string name="txt_library_book_status_on_shelf">On shelf</string>
    <string name="txt_library_book_reserving_count">Hold %1$d</string>
    <string name="txt_library_book_status_cataloging">Cataloging</string>
    
    <string name="txt_library_book_isbn">ISBN</string>
    <string name="txt_library_book_index">Call No.</string>
    <string name="txt_library_book_author">Author</string>
    <string name="txt_library_book_publisher">Publisher</string>
    <string name="txt_library_book_year">Year</string>
</resources>
