<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/txt_homework_subject"
        style="@style/CourseInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_homework_subject"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_homework_subject"
        style="@style/CourseInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_homework_subject"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txt_homework_description"
        style="@style/CourseInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_homework_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_homework_subject"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv_homework_description"
        style="@style/CourseInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_homework_description"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txt_homework_deadline"
        android:layout_marginTop="20dp"
        style="@style/CourseInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_homework_deadline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_homework_description"/>
    <TextView
        android:id="@+id/tv_homework_deadline"
        android:layout_marginTop="8dp"
        style="@style/CourseInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_homework_deadline" />

    <TextView
        android:id="@+id/txt_homework_attachment"
        android:layout_marginTop="20dp"
        style="@style/CourseInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_homework_attachment"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_homework_deadline"/>

    <TextView
        android:id="@+id/txt_homework_deadline_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_homework_deadline"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_homework_deadline"
        android:layout_marginStart="12dp"
        style="@style/HomeworkDeadlineCountdown" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/layout_attachment"
        app:layout_constraintTop_toBottomOf="@id/txt_homework_attachment">

        <TextView
            android:id="@+id/tv_homework_attach_filename"
            android:textSize="14sp"
            android:textColor="@color/colorBlack87"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/btn_download_attach"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_action_download"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/txt_homework_uploaded"
        style="@style/CourseInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_homework_uploadedFile"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_attachment"
        android:layout_marginTop="20dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_homework_uploaded"/>

    <TextView
        android:id="@+id/txt_grade"
        style="@style/CourseInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_homework_grade"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        android:layout_marginTop="20dp"/>

    <tw.bingluen.heyyzu.view.ScoreTextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:drawableBottom="@drawable/score_underline"
        android:drawablePadding="-5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_grade"/>

    <TextView
        android:id="@+id/txt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack87"
        app:layout_constraintTop_toBottomOf="@id/txt_score"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/txt_homework_no_comment"/>

</android.support.constraint.ConstraintLayout>