<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.bingluen.heyyzu.activity.LoginActivity">

    <com.cesards.cropimageview.CropImageView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_login"
        custom:crop="topRight"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusableInTouchMode="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="72dp"
        android:animateLayoutChanges="true"
        android:nextFocusUp="@id/logo"
        android:nextFocusLeft="@id/logo"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/form_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/username"
            style="@style/LoginEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username"
            android:ems="10"
            android:hint="@string/placeholder_username"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/password"
            style="@style/LoginEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/btn_login"
            style="@style/LoginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/password"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
