<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_library"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="16dp"
    android:elevation="0dp">

    <ImageView
        android:id="@+id/ic_reading_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_reading_book"/>

    <TextView
        android:id="@+id/tv_reading_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/ic_reading_book"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/txt_library_reading_book"
        style="@style/Library.Dashboard.Title"/>

    <Button
        android:id="@+id/btn_view_all_reading_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/btn_view_all"
        style="@style/Library.Dashboard.Button" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:id="@+id/view_reading_list"
        app:layout_constraintTop_toBottomOf="@+id/ic_reading_book"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:elevation="0dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/recycler_view_reading_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reading_book_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/txt_library_no_reading_book"
                android:drawableTop="@drawable/ic_empty_box"
                android:drawablePadding="5dp"
                android:layout_margin="20dp"
                />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/ic_reserving_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_reading_list"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_reserving_book"/>

    <TextView
        android:id="@+id/tv_reserving_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/ic_reserving_book"
        app:layout_constraintTop_toBottomOf="@+id/view_reading_list"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/txt_library_reserving_book"
        style="@style/Library.Dashboard.Title"/>

    <Button
        android:id="@+id/btn_view_all_reserving_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_reading_list"
        android:layout_marginTop="32dp"
        style="@style/Library.Dashboard.Button"
        android:text="@string/btn_view_all"/>


    <android.support.v7.widget.CardView
        android:id="@+id/view_reserving_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_reserving_book"
        android:layout_marginTop="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/recycler_view_reserving_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reserving_book_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/txt_library_no_reserving_book"
                android:drawableTop="@drawable/ic_empty_box"
                android:drawablePadding="5dp"
                android:layout_margin="20dp"
                />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <ImageView
        android:visibility="gone"
        android:id="@+id/ic_favorite_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_reserving_list"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_favorite"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_favorite_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/ic_favorite_book"
        app:layout_constraintTop_toBottomOf="@+id/view_reserving_list"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:text="@string/txt_library_favorite_book"
        style="@style/Library.Dashboard.Title"/>

    <Button
        android:visibility="gone"
        android:id="@+id/btn_view_all_favorite_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_reserving_list"
        android:layout_marginTop="32dp"
        style="@style/Library.Dashboard.Button"
        android:text="@string/btn_view_all"/>

    <android.support.v7.widget.CardView
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_favorite_book"
        android:layout_marginTop="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/recycler_view_favorite_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_favorite_book_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/txt_library_no_favorite_book"
                android:drawableTop="@drawable/ic_empty_box"
                android:drawablePadding="5dp"
                android:layout_margin="20dp"
                />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>