<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="280dp"
    android:padding="20dp">

    <TextView
    android:id="@+id/txt_material_subject"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/colorBlack87"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:textSize="18sp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp" />

    <ImageView
        android:id="@+id/img_handout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_file_handout_disabled_big"
        android:tint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/txt_material_subject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_link"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/img_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_file_link_disabled_big"
        android:tint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/txt_material_subject"
        app:layout_constraintLeft_toRightOf="@id/img_handout"
        app:layout_constraintRight_toLeftOf="@+id/img_video"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/img_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_file_video_disabled_big"
        android:tint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/txt_material_subject"
        app:layout_constraintLeft_toRightOf="@id/img_link"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_handout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack54"
        android:textSize="16sp"
        android:text="@string/txt_material_handout"
        app:layout_constraintTop_toBottomOf="@id/img_handout"
        app:layout_constraintLeft_toLeftOf="@id/img_handout"
        app:layout_constraintRight_toRightOf="@id/img_handout"/>

    <TextView
        android:id="@+id/txt_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack26"
        android:textSize="16sp"
        android:text="@string/txt_material_link"
        app:layout_constraintTop_toBottomOf="@id/img_link"
        app:layout_constraintLeft_toLeftOf="@id/img_link"
        app:layout_constraintRight_toRightOf="@id/img_link"/>

    <TextView
        android:id="@+id/txt_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack26"
        android:textSize="16sp"
        android:text="@string/txt_material_video"
        app:layout_constraintTop_toBottomOf="@id/img_video"
        app:layout_constraintLeft_toLeftOf="@id/img_video"
        app:layout_constraintRight_toRightOf="@id/img_video"
        />

</android.support.constraint.ConstraintLayout>